2004-06-23  Todd Berman  <tberman@off.net>

	* Gui/Dialogs/NewFileDialog.cs: add an event for when Ok is pressed.
	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs: fix
	new file dialog from here.

2004-06-23  Todd Berman  <tberman@off.net>

	* Gui/CompletionDatabaseWizard: removed directory, as its unused.
	* Makefile.am: updated to reflect above.

2004-06-23  Todd Berman  <tberman@off.net>

	* Services/Project/DefaultProjectService.cs: make solution loading take
	place without any gui locks.
	* Service/File/DefaultFileService.cs: proxy OpenFile to a real method
	that gets called in the idle handler.

2004-06-23  Todd Berman  <tberman@off.net>

	* Services/DispatchService/DispatchService.cs: change up a bit
	to allow a void blah () delegate and a void blah (object) delegate.
	Added overloads to hit those.
	* Gui/Pads/ClassScout/ClassScout.cs: Update to new DispatchService
	API.
	* Gui/Dialogs/NewFileDialog.cs: Update to new DispatchService API.

2004-06-23  Todd Berman  <tberman@off.net>

	* Commands/FileCommands.cs: Cleanup a bit, move some code around.
	* Gui/Dialogs/NewFileDialog.cs: Convert to using DispatchService.
	This also tests the BackgroundDispatch method, which seems to be
	working fine. Now New File will no longer lock up the GUI at all.
	Also cleanup misc code, and unused pieces.

2004-06-23  Todd Berman  <tberman@off.net>

	* Gui/Pads/ClassScout/ClassScout.cs: use DispatchService instead of
	IdleWork stuff.
	* Services/DispatchService/DispatchService.cs: new service, used to
	pass messages to the gui, or a background thread. The gui stuff has
	been tested by the ClassScout above, the background thread dispatching
	has yet to be tested.
	* Makefile.am: Add DispatchService.cs

2004-06-21  John Luke <jluke@cfl.rr.com>

	* Gui/Dialogs/OptionPanels/ProjectOptions/CompileFileProjectOptions.cs:
	use the messageservice for a the error dialog
	don't skip the first item when storing whether files should be	
	included, fixes bug # 60363