@@ -1,3 +1,10 @@
+2004-06-24  Todd Berman  <tberman@off.net>
+
+	* Gui/Dialogs/NewSolutionDialog.cs:
+	* Commands/ProjectBrowserCommands/CombineNodeCommands.cs:
+	* Commands/FileCommands.cs: convert to using new async dispatcher
+	stuff.
+
 2004-06-23  Todd Berman  <tberman@off.net>
 
 	* Gui/Dialogs/NewFileDialog.cs: add an event for when Ok is pressed.
